# shason

./: LICENSE  README.md  hook-geopandas.py  pyproject.toml  shason.py
tests/: test_shason.py
